[gd_scene load_steps=6 format=3 uid="uid://cpj2xqncv8gwl"]

[ext_resource type="Texture2D" uid="uid://cuk423jlajdrb" path="res://2111.w015.n001.624B.p15.624.jpg" id="1_dxlao"]
[ext_resource type="Script" path="res://sound_menu.gd" id="1_vs0lp"]
[ext_resource type="FontFile" uid="uid://cus18svvcnps" path="res://hHachimaki.ttf" id="2_us53n"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i0wkn"]
texture = ExtResource("1_dxlao")

[sub_resource type="GDScript" id="GDScript_fmjk1"]
script/source = "extends Control


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	$VBoxContainer/MasterSlider.value = db_to_linear(AudioServer.get_bus_volume_db(0))
	


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass





func _on_master_slider_mouse_exited() -> void:
	release_focus()
"

[node name="SoundMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vs0lp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_i0wkn")

[node name="AudioOption" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_fmjk1")

[node name="VBoxContainer" type="VBoxContainer" parent="AudioOption"]
layout_mode = 0
offset_left = 216.0
offset_top = 231.0
offset_right = 961.0
offset_bottom = 504.0

[node name="MasterLabel" type="Label" parent="AudioOption/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.95, 0.7125, 0, 1)
theme_override_fonts/font = ExtResource("2_us53n")
theme_override_font_sizes/font_size = 30
text = "Master
"

[node name="MasterSlider" type="HSlider" parent="AudioOption/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="MusicLabel" type="Label" parent="AudioOption/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.95, 0.7125, 0, 1)
theme_override_fonts/font = ExtResource("2_us53n")
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="MusicSlider" type="HSlider" parent="AudioOption/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="AudioOption/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.95, 0.7125, 0, 1)
theme_override_fonts/font = ExtResource("2_us53n")
theme_override_font_sizes/font_size = 30
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="AudioOption/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="Save" type="Button" parent="AudioOption"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -259.0
offset_top = -101.0
offset_right = -189.0
offset_bottom = -63.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_us53n")
theme_override_font_sizes/font_size = 30
text = "Save
"

[connection signal="mouse_exited" from="AudioOption/VBoxContainer/MasterSlider" to="AudioOption" method="_on_master_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioOption/VBoxContainer/MusicSlider" to="AudioOption" method="_on_music_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioOption/VBoxContainer/SFXSlider" to="AudioOption" method="_on_sfx_slider_mouse_exited"]
[connection signal="pressed" from="AudioOption/Save" to="." method="_on_save_pressed"]
